Style: Use link for book appointment button instead of javascript

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,9 @@
             <a href="./contact.html" class="active">Contact</a>
           </li>
         </ul>
-        <script>new timelyButton("gardenroomhairsalon", {"style":"dark"});</script>
+        <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener">
+          <button class="generic-button">Book Appointment</button>
+        </a>
       </nav>
     </header>
 
