--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                     <a href="./contact.html">Contact</a>
                 </li>               
             </ul>
-            <script>new timelyButton("gardenroomhairsalon", {"style":"dark"});</script>
+            <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener">
+                <button class="generic-button">Book Appointment</button>
+            </a>
         </nav>
     </header>
 
