--- a/pricelist.html
+++ b/pricelist.html
@@ -42,7 +42,9 @@
                     <a href="./contact.html">Contact</a>
                 </li>               
             </ul>
-            <script>new timelyButton("gardenroomhairsalon", {"style":"dark"});</script>
+            <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener">
+                <button class="generic-button">Book Appointment</button>
+            </a>
         </nav>
     </header>
 
@@ -60,7 +62,9 @@
                     </div>
                 </div>
                 <div>
-                    <script>new timelyButton("gardenroomhairsalon", {"style":"dark"});</script>
+                    <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener">
+                        <button class="generic-button">Book Appointment</button>
+                    </a>
                 </div>
                 <div class="pricelist-img-container">
                     <div class="pricelist-img"></div>
