Doc: Add responsiveness testing to readme

--- a/pricelist.html
+++ b/pricelist.html
@@ -56,9 +56,9 @@
                 <h1>Pricelist</h1>
                 <div class="list">
                     <div class="pricelist-left">
-                        <p>Cut & Blow dry</p>
-                        <p>Coloring</p>
-                        <p>Perm Treatment</p>
+                        <p>£30 Cut & Blow dry</p>
+                        <p>£80 Coloring</p>
+                        <p>£100 Perm Treatment</p>
                     </div>
                 </div>
                 <div>
