--- a/thankyou.html
+++ b/thankyou.html
@@ -6,7 +6,7 @@
     <!-- meta tags for search engines -->
     <meta name="description" content="Welcome to The Garden Room, your premier destination for hair styling and beauty services in Whetstone, Leicestershire. Our expert stylists offer a wide range of services, including cuts, coloring, treatments, and more, ensuring you leave feeling confident and rejuvenated. Book your appointment today!">
     <meta name="keywords" content="hair salon, beauty salon, Whetstone, Leicestershire, haircuts, hair styling, coloring, treatments, hair care, The Garden Room">
-    <title>404</title>
+    <title>Thankyou</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
