--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
           
           <!-- Contact image -->
           <div class="contact-img-container" >
-            <img src="./assets/images/the-salon.webp" alt="Image of the hair salon from behind the chair looking out towards the garden">
+            <img src="./assets/images/the-salon.webp" alt="The chair and mirror in the hair salon">
           </div>
 
         </div>
