Doc: Provide nav bar empty links to the current page to avoid redundant links, as picked up by wave

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
             <a href="./pricelist.html">Pricelist</a>
           </li>
           <li>
-            <a href="./contact.html" class="active">Contact</a>
+            <a href="#" class="active">Contact</a>
           </li>
         </ul>
         <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener">
