--- a/pricelist.html
+++ b/pricelist.html
@@ -36,7 +36,7 @@
                     <a href="./services.html">Services</a>
                 </li>
                 <li>
-                    <a href="./pricelist.html" class="active">Pricelist</a>
+                    <a href="#" class="active">Pricelist</a>
                 </li>
                 <li>
                     <a href="./contact.html">Contact</a>
