--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
                     <a href="./index.html">Home</a>
                 </li>
                 <li>
-                    <a href="./services.html" class="active">Services</a>
+                    <a href="#" class="active">Services</a>
                 </li>
                 <li>
                     <a href="./pricelist.html">Pricelist</a>
