--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="fade-in">
             <ul id="menu">
                 <li>
-                    <a href="./index.html" class="active">Home</a>
+                    <a href="#" class="active">Home</a>
                 </li>
                 <li>
                     <a href="./services.html">Services</a>
