Doc: Fix contact form according to wave accessibility guidelines

--- a/contact.html
+++ b/contact.html
@@ -83,11 +83,11 @@
             <form action="thankyou.html" method="GET" class="contact-form">
               <h1>Contact Us</h1>
               <label for="email">Email</label>
-              <input type="email" name="email" class="text-input" required/>
+              <input type="email" id="email" name="email" class="text-input" required/>
               <label for="phone">Phone</label>
-              <input type="tel" name="phone" pattern="[0-9]*"  class="text-input" required/>
+              <input type="tel" id="phone" name="phone" pattern="[0-9]*" class="text-input" required/>
               <label for="message">Message</label>
-              <textarea name="message" class="textarea"></textarea>
+              <textarea id="message" name="message" class="textarea"></textarea>
               <input type="hidden" name="_next" value="thankyou.html">
               <br>
               <button type="submit" class="generic-button">Submit</button>
