--- a/services.html
+++ b/services.html
@@ -89,7 +89,9 @@
                         <p>Add texture and volume to your hair with our premium perm services. Whether you desire loose waves or tight curls, our experienced stylists will create a customized look that lasts, giving you effortless style and bounce.</p>
                     </div>
                 </div>
-                <script>new timelyButton("gardenroomhairsalon", {"style":"dark"});</script>
+                <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener">
+                    <button class="generic-button">Book Appointment</button>
+                </a>
             </div>
         </section>
     </main>
