Doc: Change section to a div due to the lack of a heading

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </section>
-        <section class="home-bottom-section">
+        <div class="home-bottom-section">
             <a href="./services.html" class="generic-button">
                 View Our Services
             </a>
@@ -68,7 +68,7 @@
                 <div id="home-services-3" class="home-services-img"></div>
                 <div id="home-services-4" class="home-services-img"></div>
             </div> 
-        </section>
+        </div>
     </main>
 
     <!-- Footer -->
