Doc: Take button out of 'a' tag within the header

--- a/services.html
+++ b/services.html
@@ -40,8 +40,8 @@
                     <a href="./contact.html">Contact</a>
                 </li>               
             </ul>
-            <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener">
-                <button class="generic-button">Book Appointment</button>
+            <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" class="generic-button" rel="noopener">
+                Book Appointment
             </a>
         </nav>
     </header>
