--- a/contact.html
+++ b/contact.html
@@ -65,8 +65,8 @@
             <a href="#" class="active">Contact</a>
           </li>
         </ul>
-        <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener">
-          <button class="generic-button">Book Appointment</button>
+        <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener" class="generic-button">
+          Book Appointment
         </a>
       </nav>
     </header>
