--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <a href="./contact.html">Contact</a>
                 </li>               
             </ul>
-            <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener">
-                <button class="generic-button">Book Appointment</button>
+            <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener" class="generic-button">
+                Book Appointment
             </a>
         </nav>
     </header>
