Doc: Take button element out of 'a' element on services page

--- a/services.html
+++ b/services.html
@@ -87,8 +87,8 @@
                         <p>Add texture and volume to your hair with our premium perm services. Whether you desire loose waves or tight curls, our experienced stylists will create a customized look that lasts, giving you effortless style and bounce.</p>
                     </div>
                 </div>
-                <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener">
-                    <button class="generic-button">Book Appointment</button>
+                <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener" class="generic-button">
+                    Book Appointment
                 </a>
             </div>
         </section>
