Doc: Take button out of 'a' element on pricelist page

--- a/pricelist.html
+++ b/pricelist.html
@@ -60,8 +60,8 @@
                     </div>
                 </div>
                 <div>
-                    <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener">
-                        <button class="generic-button">Book Appointment</button>
+                    <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener" class="generic-button">
+                        Book Appointment
                     </a>
                 </div>
                 <div class="pricelist-img-container">
