--- a/contact.html
+++ b/contact.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <!-- meta tags for search engines -->
     <meta
       name="description"
       content="Welcome to The Garden Room, your premier destination for hair styling and beauty services in Whetstone, Leicestershire. Our expert stylists offer a wide range of services, including cuts, coloring, treatments, and more, ensuring you leave feeling confident and rejuvenated. Book your appointment today!"
-    />
+    >
     <meta
       name="keywords"
       content="hair salon, beauty salon, Whetstone, Leicestershire, haircuts, hair styling, coloring, treatments, hair care, The Garden Room"
-    />
+    >
     <title>Contact - Garden Room</title>
     <!-- Favicon -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="./assets/favicon/apple-touch-icon.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./assets/favicon/favicon-32x32.png"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="./assets/favicon/favicon-16x16.png"
-    />
+    >
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" >
   </head>
   <body>
     <!-- Header -->
@@ -43,9 +43,9 @@
           id="logo"
           src="./assets/images/garden-room-logo.webp"
           alt="Garden Room Hair Salon Logo"
-        />
+        >
       </a>
-      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <input type="checkbox" id="nav-toggle" name="nav-toggle" >
       <label for="nav-toggle" class="nav-toggle-label"
         ><i class="fa-solid fa-bars"></i
       ></label>
@@ -81,9 +81,9 @@
             <form action="thankyou.html" method="GET" class="contact-form">
               <h1>Contact Us</h1>
               <label for="email">Email</label>
-              <input type="email" id="email" name="email" class="text-input" required/>
+              <input type="email" id="email" name="email" class="text-input" required>
               <label for="phone">Phone</label>
-              <input type="tel" id="phone" name="phone" pattern="[0-9]*" class="text-input" required/>
+              <input type="tel" id="phone" name="phone" pattern="[0-9]*" class="text-input" required>
               <label for="message">Message</label>
               <textarea id="message" name="message" class="textarea"></textarea>
               <input type="hidden" name="_next" value="thankyou.html">
@@ -143,7 +143,7 @@
           id="footer-logo"
           src="./assets/images/garden-room-logo.webp"
           alt="Garden Room Hair Salon Logo"
-        />
+        >
       </div>
     </footer>
 
