Doc: Add targe = _blank to book appointment links

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="./contact.html">Contact</a>
                 </li>               
             </ul>
-            <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener" class="generic-button">
+            <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener" class="generic-button" target="_blank">
                 Book Appointment
             </a>
         </nav>
