--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
             <a href="#" class="active">Contact</a>
           </li>
         </ul>
-        <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener" class="generic-button">
+        <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener" class="generic-button" target="_blank">
           Book Appointment
         </a>
       </nav>
