--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
                     <a href="./contact.html">Contact</a>
                 </li>               
             </ul>
-            <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" class="generic-button" rel="noopener">
+            <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" class="generic-button" rel="noopener" target="_blank">
                 Book Appointment
             </a>
         </nav>
@@ -87,7 +87,7 @@
                         <p>Add texture and volume to your hair with our premium perm services. Whether you desire loose waves or tight curls, our experienced stylists will create a customized look that lasts, giving you effortless style and bounce.</p>
                     </div>
                 </div>
-                <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener" class="generic-button">
+                <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener" class="generic-button" target="_blank">
                     Book Appointment
                 </a>
             </div>
