Style: improve styles of book appointments button on pricelist page and the generic button class

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
         </section>
         <div class="home-bottom-section">
-            <a href="./services.html" class="generic-button">
+            <a href="./services.html" class="generic-button home-services-button">
                 View Our Services
             </a>
             <div class="images-div">
