--- a/pricelist.html
+++ b/pricelist.html
@@ -51,18 +51,16 @@
         <!-- Pricelist content -->
         <div class="pricelist-page-container">
             <div class="pricelist">
-                <h1>Pricelist</h1>
                 <div class="list">
-                    <div class="pricelist-left">
+                    <div class="pricelist-list">
+                        <h1>Pricelist</h1>
                         <p>£30 Cut & Blow dry</p>
                         <p>£80 Coloring</p>
                         <p>£100 Perm Treatment</p>
+                        <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener" class="generic-button pricelist-button" target="_blank">
+                            Book Appointment
+                        </a>
                     </div>
-                </div>
-                <div>
-                    <a href="https://bookings.gettimely.com/gardenroomhairsalon/bb/book" rel="noopener" class="generic-button" target="_blank">
-                        Book Appointment
-                    </a>
                 </div>
                 <div class="pricelist-img-container">
                     <div class="pricelist-img"></div>
