Doc: Add span for screen readers in empty label for the dropdown menu

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
       </a>
       <input type="checkbox" id="nav-toggle" name="nav-toggle" >
       <label for="nav-toggle" class="nav-toggle-label"
-        ><i class="fa-solid fa-bars"></i
+        ><span class="sr-only">e.g. Toggle mobile nav menu</span><i class="fa-solid fa-bars"></i
       ></label>
       <!-- Nav Menu-->
       <nav class="fade-in">
