--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img id="logo" src="./assets/images/garden-room-logo.webp" alt="Garden Room Hair Salon Logo">
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle" >
-        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <label for="nav-toggle" class="nav-toggle-label"><span class="sr-only">e.g. Toggle mobile nav menu</span><i class="fa-solid fa-bars"></i></label>
         <!-- Nav Menu-->
         <nav class="fade-in">
             <ul id="menu">
